--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <button onclick="callApi()">Call API</button>
+<body onload="intervalFunc()">
+    <p id="print"></p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
 <script>
     function callApi(){
-        axios.get('http://157.245.13.74:3000')
+        axios.get('http://localhost:3000')
         .then(resp=>{
+            document.getElementById("print").innerHTML = resp.data;
             console.log(resp);
         });
     }
+</script>
+
+<script>
+    function intervalFunc(){
+    setInterval(()=>{
+        callApi();
+    },10000)
+}
+
 </script>
 </body>
 </html>
